--- a/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
+        <p:ajaxStatus style="position:fixed;right:5px;bottom:5px">
             <f:facet name="start">
                 <p:graphicImage name="demo/images/preloader.gif"/>
             </f:facet>
