--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -419,7 +419,21 @@ img.riskImage:hover {
     }
 }
 /**/
+
+@media (max-width: 480px) and (min-width: 320px) {
+	.margin-top-signup {
+	margin-top: 30px;
+	}
+}
+
 /*Prakash*/
+.signupFooter {
+bottom: 0!important;
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
 .FundCenterAlignBlock {
 	margin: 0 auto!important;
 	float: none!important;
