TD CTO Version 1.20 - Revised 9/7/2016 Prashant

--- a/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
@@ -19,7 +19,11 @@
             </ui:insert>
 
             <div class="layout-portlets-box TexAlCenter">
-                <span class="Fs14 gray FontThemeRegular">Invessence  |   All rights reserved.</span>
+                <div class="layout-portlets-box TexAlCenter">
+                    <script type="text/javascript" src="https://seal.thawte.com/getthawteseal?host_name=www.buildingbenjamins.com&amp;size=S&amp;lang=en"></script>
+                </div>
+                Powered by <i class="fa fa-copyright"></i>Invessence<br/>
+                <i class="fa fa-copyright"></i>#{webutil.uiprofile.companyname} - All rights reserved.
             </div>
         </div>
 
