--- a/tcm/modules/web/src/main/webapp/template/html/buildingbenjamins-Welcome.htm
+++ b/tcm/modules/web/src/main/webapp/template/html/buildingbenjamins-Welcome.htm
@@ -1,98 +1,134 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
+
 <head>
-    <title>Account Locked</title>
-    <meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type" />
-    <style type="text/css">
-        h1 {
-            font-family: Arial, sans-serif;
-            font-size: 30px;
-            color: #009ABB;
-        }
-
-        h2 {
-            font-family: Arial, sans-serif;
-            font-size: 18px;
-            color: #009ABB;
-        }
-
-        body, p, b, i, em, dt, dd, dl, caption, th, td, tr, u, select, option, form, div, li {
-            font-family: Arial, sans-serif;
-            font-size: 12px;
-        }
-
-            /* IE Specific */
-        body, textarea {
-            scrollbar-3dlight-color: #808080;
-            scrollbar-highlight-color: #808080;
-            scrollbar-face-color: #009ABB;
-            scrollbar-shadow-color: #808080;
-            scrollbar-darkshadow-color: #805B32;
-            scrollbar-arrow-color: #000000;
-            scrollbar-track-color: #F8EFE2;
-        }
-
-    </style>
+   <title>Welcome</title>
 </head>
-<body bgcolor="#ffffff">
-<p>&nbsp;</p>
 
-<table align="center" bgcolor="#009abb" border="0" cellpadding="3" cellspacing="0" width="600">
+<body>
+<table>
     <tbody>
     <tr>
-        <td colspan="6">&nbsp;</td>
-    </tr>
-    <tr>
-        <td bgcolor="#ffffff" colspan="2"><img alt="Invessence" src="http://www.invessence.com/wp-content/uploads/2014/01/invessence_logo-clear-300x65.png" style="height: 45px; width: 208px; float: left" /></td>
-        <td style="vertical-align: top; text-align: center; background-color: #ffffff">&nbsp;</td>
-        <td style="vertical-align: top; text-align: center; background-color: #ffffff">&nbsp;</td>
-        <td style="vertical-align: top; text-align: center; background-color: #ffffff">&nbsp;</td>
-        <td style="vertical-align: top; text-align: center; background-color: #ffffff"><a class="synved-social-button synved-social-button-follow synved-social-size-24 synved-social-resolution-single synved-social-provider-facebook" data-provider="facebook" href="https://www.facebook.com/Invessence" rel="nofollow" style="font-size: 0px; height: 24px; width: 24px; margin: 0px 5px 5px 0px" target="_blank" title="Follow us on Facebook"><img alt="facebook" class="synved-share-image synved-social-image synved-social-image-follow" height="24" src="http://www.invessence.com/wp-content/plugins/social-media-feather/synved-social/image/social/regular/48x48/facebook.png" style="border-top: medium none; height: 24px; border-right: medium none; width: 24px; border-bottom: medium none; padding-bottom: 0px; padding-top: 0px; padding-left: 0px; margin: 0px; border-left: medium none; display: inline; padding-right: 0px; box-shadow: none" title="Follow us on Facebook" width="24" /></a> <a data-provider="twitter" href="http://twitter.com/Invessence" rel="nofollow" style="font-size: 0px; height: 24px; width: 24px; margin: 0px 5px 5px 0px" target="_blank" title="Follow us on Twitter"><img alt="twitter" height="24" src="http://www.invessence.com/wp-content/plugins/social-media-feather/synved-social/image/social/regular/48x48/twitter.png" style="border-top: medium none; height: 24px; border-right: medium none; width: 24px; border-bottom: medium none; padding-bottom: 0px; padding-top: 0px; padding-left: 0px; margin: 0px; border-left: medium none; display: inline; padding-right: 0px; box-shadow: none" title="Follow us on Twitter" width="24" /> </a><a class="synved-social-button synved-social-button-follow synved-social-size-24 synved-social-resolution-single synved-social-provider-linkedin" data-provider="linkedin" href="http://www.linkedin.com/company/invessence-inc-" rel="nofollow" style="font-size: 0px; height: 24px; width: 24px; margin: 0px 5px 5px 0px" target="_blank" title="Find us on Linkedin"><img alt="linkedin" class="synved-share-image synved-social-image synved-social-image-follow" height="24" src="http://www.invessence.com/wp-content/plugins/social-media-feather/synved-social/image/social/regular/48x48/linkedin.png" style="border-top: medium none; height: 24px; border-right: medium none; width: 24px; border-bottom: medium none; padding-bottom: 0px; padding-top: 0px; padding-left: 0px; margin: 0px; border-left: medium none; display: inline; padding-right: 0px; box-shadow: none" title="Find us on Linkedin" width="24" /> </a><a class="synved-social-button synved-social-button-follow synved-social-size-24 synved-social-resolution-single synved-social-provider-google_plus" data-provider="google_plus" href="https://plus.google.com/108251068767119607829/about" rel="nofollow" style="font-size: 0px; height: 24px; width: 24px; margin: 0px 5px 5px 0px" target="_blank" title="Follow us on Google+"><img alt="google_plus" class="synved-share-image synved-social-image synved-social-image-follow" height="24" src="http://www.invessence.com/wp-content/plugins/social-media-feather/synved-social/image/social/regular/48x48/google_plus.png" style="border-top: medium none; height: 24px; border-right: medium none; width: 24px; border-bottom: medium none; padding-bottom: 0px; padding-top: 0px; padding-left: 0px; margin: 0px; border-left: medium none; display: inline; padding-right: 0px; box-shadow: none" title="Follow us on Google+" width="24" /> </a></td>
-    </tr>
-    </tbody>
-    <tbody>
-    <tr>
-        <td colspan="6" style="background-color: #fff">
-            <table align="center" bgcolor="#ffffff" border="0" cellpadding="3" cellspacing="0" width="100%">
-                <tbody>
-                <tr>
-                    <td colspan="6" style="background-color: #fff">
-                        <h2 align="left">Welcome to Invessence</h2>
-
-                        <h3 align="left">Hi '0',</h3>
-
-                        <p>Thank you for opening an account! Now that you&#39;ve registered, it&#39;s time to set your password. Follow the simple prompts on our secure page to create your personalized password.</p>
-
-                        <p>Once that&#39;s done, you&#39;re on your way to your own custom portfolio of low-cost ETF securities, individualized to your profile.</p>
-
-                        <p><strong>NOTE: This link is valid for one use only.</strong></p>
-
-                        <p>You will be asked to:</p>
-
-                        <ol>
-                            <li>Userid: '1'</li>
-                            <li>Enter your new password.</li>
-                            <li>Re-enter your new password to confirm it.</li>
-                            <li>Click &quot;Submit&quot;.</li>
-                        </ol>
-
-                        <p><a href="'2'/register.xhtml?u='3'&r='4'" target="_blank">Let&#39;s start.</a>.</p>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+        <td style="padding: 10px 0px; text-align:center;">
+            <img src="BB1.png">
         </td>
     </tr>
+
     <tr>
-        <td colspan="6" style="background-color: #fff"><span style="font-size: 12px"><em><span style="line-height: 23px">If you have any questions, please contact us at <a href="mailto:support@invessence.com">support@invessence.com</a> or call us at <strong>(201) 977-2704</strong>.</span></em></span></td>
+        <td style="padding: 10px 0px;">
+            <p style="color:#006844; font-size:20px"><b>Welcome to Building Benjamins</b></p>
+        </td>
     </tr>
+
     <tr>
-        <td colspan="6" style="background-color: #ebebeb"><span style="font-size: 11px; font-family: Helvetica; color: #808080; padding-bottom: 9px; text-align: left; padding-top: 9px; padding-left: 3px; line-height: 125%; padding-right: 2px"><strong>Invessence, Inc. &middot; One Main Street, Suite 202 &middot; Chatham, NJ 07928 &middot; USA</strong> </span></td>
+        <td style="padding: 10px 0px;">
+            <p style="font-size:20px"><b>Hi &#39;3&#39;,</b></p>
+        </td>
     </tr>
+
     <tr>
-        <td colspan="6" style="background-color: #ebebeb"><span style="font-size: 11px; font-family: Helvetica; color: #808080; padding-bottom: 9px; text-align: left; padding-top: 9px; padding-left: 3px; line-height: 125%; padding-right: 2px">This email was sent by <a href="mailto:support@invessence.com" style="color: #404040 !important" target="_blank">support@invessence.com</a> </span></td>
+        <td style="padding: 10px 0px;">
+            <p>Thank you for opening an account! Now that you&#39;ve registered, it&#39;s time to set your password.<br>
+                Follow the simple prompts on our secure page to create your personalized password.</p>
+        </td>
     </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p>Once that&#39;s done, you&#39;re on your way to a wiser, better diversified, portfolio ? all customized to your<br>
+                individual risk tolerance level.</p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p>Your User ID is: ?1?</p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p>After clicking the link below, you will be asked to:</p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p>1. Enter your new password.<br>
+
+                2. Re-enter your new password to confirm it.<br>
+
+                3. Click &quot;Submit&quot;.</p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p>Please store your User ID and Password in a safe place ? and remember, neither Building<br>
+                Benjamins nor any of its affiliates will ever ask you to share your password with us.</p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p><b>NOTE: This link is valid for one use only.<b></p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p><a href="">Click here to set-up your new password.</a></p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p>Thank you for investing wiser with Building Benjamins.</p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p>Sincerely,</p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p>The Building Benjamins Team</p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 10px 0px;">
+            <p>If you have any questions, please contact us at <i><a href="mailto:support@invessence.com">support@buildingbenjamins.com</a></i>.</p>
+        </td>
+    </tr>
+
+    <tr>
+        <td style="padding: 0px; background-color:#ebebeb; text-align:center;">
+            <p style="color:#8f9d9d">Building Benjamins · 129 Summit Avenue, Suite 300 · Summit, NJ 07901 · USA</p>
+        </td>
+    </tr>
+
+
     </tbody>
 </table>
 </body>
 </html>
+
