Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -448,6 +448,10 @@ img.riskImage:hover {
 }
 
 /*Prakash*/
+.funding > span{
+	font-size: 18px!important;
+}
+
 .fundingRecurring > input {
 	width: 95%;
     border-radius: 3px!important;
