--- a/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
@@ -52,7 +52,7 @@
         <ui:fragment rendered="#{uiLayout.customCSS != null}">
             <h:outputStylesheet name="#{uiLayout.customCSS}" library="#{uiLayout.cssDIR}"/>
         </ui:fragment>
-        ent rendered="#{uiLayout.uiprofile.googleAnalytic != null}">
+        <ui:fragment rendered="#{uiLayout.uiprofile.googleAnalytic != null}">
            <h:outputStylesheet name="#{uiLayout.uiprofile.googleAnalytic}" library="#{uiLayout.cssDIR}"/>
         </ui:fragment>
 
