--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -242,7 +242,7 @@ img.riskImage:hover {
     padding: 7px 0px!important;
 	}
 	
-    .CustomWidthFA {
+    .CustomWidthFA, .CustomWidthFA3 {
         width: 100% !important;
         margin: 5px 0;
         border-radius: 3px !important;
