TD CTO Version 1.22 - Revised 9/7/2016 Prashant

--- a/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
@@ -53,7 +53,8 @@
             <h:outputStylesheet name="#{uiLayout.customCSS}" library="#{uiLayout.cssDIR}"/>
         </ui:fragment>
         <ui:fragment rendered="#{uiLayout.uiprofile.googleAnalytic != null}">
-           <h:outputStylesheet name="#{uiLayout.uiprofile.googleAnalytic}" library="#{uiLayout.cssDIR}"/>
+           <h:outputStylesheet name="#{uiLayout.uiprofile.googleAnalytic}"
+                               library="#{uiLayout.cssDIR}"/>
         </ui:fragment>
 
 </ui:composition>
