--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -448,6 +448,17 @@ img.riskImage:hover {
 }
 
 /*Prakash*/
+.tdPanelInternal > div {
+	padding:0!important;
+}
+
+.tdPanelInternal {
+border: 0px!important; 
+background: transparent!important; 
+margin-top: -10px!important; 
+padding: 0!important;
+}
+
 .funding > span{
 	font-size: 18px!important;
 }
@@ -455,6 +466,7 @@ img.riskImage:hover {
 .fundingRecurring > input {
 	width: 95%;
     border-radius: 3px!important;
+    text-align: left;
 }
 
 .fundingRecurring {
