TD CTO Version 1.23 - Revised 9/18/2016 Prashant

--- a/tcm/modules/web/src/main/webapp/template/html/buildingbenjamins-Welcome.html
+++ b/tcm/modules/web/src/main/webapp/template/html/buildingbenjamins-Welcome.html
@@ -1602,7 +1602,7 @@ div.preheader {
                         </div>
 
                         <h2 style="text-align: left;">
-                            Hi '3',
+                            Hi '5',
                         </h2>
 
                        <div class="column__padding--inline">
@@ -1631,7 +1631,7 @@ div.preheader {
                     </div>
 
                     <div class="column__padding--inline">
-                        <p style="text-align: left;">Your User ID is <strong>'1'</strong>.&nbsp;
+                        <p style="text-align: left;">Your User ID is <strong>'2'</strong>.&nbsp;
                             After clicking the link below, you will be asked to:</p>
                         <ol>
                             <li style="text-align: left;">Enter your new password.</li>
@@ -1665,7 +1665,7 @@ div.preheader {
 
                     <div class="column__padding--inline">
                         <div class="btn btn--flat btn--large" style="text-align:center;">
-                            <a cs-button href="'0'/register.xhtml?u='1'&r='2'" fix-pos data-vml-width="95" height="48"
+                            <a cs-button href="'0'" fix-pos data-vml-width="95" height="48"
                                style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px;">Activate</a>
                         </div>
                     </div>
