--- a/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/spark/layout.xhtml
@@ -5,56 +5,56 @@
         xmlns:ui="http://java.sun.com/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
 
-        <div id="menu-mask"></div>
+    <div id="menu-mask"></div>
 
-        <ui:include src="/template/common/spark/topbar.xhtml"/>
+    <ui:include src="/template/common/spark/topbar.xhtml"/>
 
-        <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
-           <ui:include src="/template/common/spark/layoutmenu.xhtml"/>
-        </ui:fragment>
+    <ui:fragment rendered="#{webutil.isUserLoggedIn()}">
+        <ui:include src="/template/common/spark/layoutmenu.xhtml"/>
+    </ui:fragment>
 
-        <div id="layout-portlets-cover">
-            <ui:insert name="content">
-                Template
-            </ui:insert>
+    <div id="layout-portlets-cover">
+        <ui:insert name="content">
+            Template
+        </ui:insert>
 
-            <div class="layout-portlets-box TexAlCenter" style="font-size: 13px;">
-                <div class="layout-portlets-box TexAlCenter" style="border-radius:0;">
-                    <script type="text/javascript" src="https://seal.thawte.com/getthawteseal?host_name=www.buildingbenjamins.com&amp;size=S&amp;lang=en"></script>
-                </div>
-                Powered by <i class="fa fa-copyright"></i>Invessence<br/>
-                <i class="fa fa-copyright"></i>#{webutil.uiprofile.companyname} - All rights reserved.
+        <div class="layout-portlets-box TexAlCenter" style="font-size: 13px;">
+            <div class="layout-portlets-box TexAlCenter" style="border-radius:0;">
+                <script type="text/javascript" src="https://seal.thawte.com/getthawteseal?host_name=www.buildingbenjamins.com&amp;size=S&amp;lang=en"></script>
             </div>
+            Powered by Invessence<sup class="Fs9">SM</sup><br/>
+            #{webutil.uiprofile.companyname}<sup class="Fs9">TM</sup> - All rights reserved.
         </div>
+    </div>
 
-        <p:ajaxStatus style="position:fixed;right:5px;bottom:5px">
-            <f:facet name="start">
-                <p:graphicImage name="demo/images/preloader.gif"/>
-            </f:facet>
+    <p:ajaxStatus style="position:fixed;right:5px;bottom:5px">
+        <f:facet name="start">
+            <p:graphicImage name="demo/images/preloader.gif"/>
+        </f:facet>
 
-            <f:facet name="complete">
-                <h:outputText value=""/>
-            </f:facet>
-        </p:ajaxStatus>
+        <f:facet name="complete">
+            <h:outputText value=""/>
+        </f:facet>
+    </p:ajaxStatus>
 
-        <!--
-                <script type="text/javascript" src="https://integratedchat.teamviewer.com/widget"></script>
-        -->
+    <!--
+            <script type="text/javascript" src="https://integratedchat.teamviewer.com/widget"></script>
+    -->
 
-        <h:outputStylesheet name="css/core-layout.css" library="spark-layout"/>
-        <h:outputStylesheet name="css/custom.css" library="spark-layout"/>
-        <h:outputStylesheet name="css/font-awesome.css" library="spark-layout"/>
-        <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
-        <h:outputStylesheet name="css/spark-layout.css" library="spark-layout"/>
-        <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
-        <h:outputStylesheet name="css/modena-font.css" library="spark-layout"/>
-        <h:outputStylesheet name="css/invessence.css" library="invessence"/>
-        <ui:fragment rendered="#{uiLayout.customCSS != null}">
-            <h:outputStylesheet name="#{uiLayout.customCSS}" library="#{uiLayout.cssDIR}"/>
-        </ui:fragment>
-        <ui:fragment rendered="#{uiLayout.uiprofile.googleAnalytic != null}">
-           <h:outputStylesheet name="#{uiLayout.uiprofile.googleAnalytic}"
-                               library="#{uiLayout.cssDIR}"/>
-        </ui:fragment>
+    <h:outputStylesheet name="css/core-layout.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/custom.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/font-awesome.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/spark-layout.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/animate.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/modena-font.css" library="spark-layout"/>
+    <h:outputStylesheet name="css/invessence.css" library="invessence"/>
+    <ui:fragment rendered="#{uiLayout.customCSS != null}">
+        <h:outputStylesheet name="#{uiLayout.customCSS}" library="#{uiLayout.cssDIR}"/>
+    </ui:fragment>
+    <ui:fragment rendered="#{uiLayout.uiprofile.googleAnalytic != null}">
+        <h:outputStylesheet name="#{uiLayout.uiprofile.googleAnalytic}"
+                            library="#{uiLayout.cssDIR}"/>
+    </ui:fragment>
 
 </ui:composition>
