--- a/tcm/modules/web/src/main/webapp/template/common/simple.xhtml
+++ b/tcm/modules/web/src/main/webapp/template/common/simple.xhtml
@@ -17,7 +17,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
         <meta name="apple-mobile-web-app-capable" content="yes" />
     </f:facet>
-    <title>Invessence</title>
+    <title>#{uiLayout.uiprofile.companyname}</title>
     <h:outputScript name="js/ripple-effect.js" library="#{uiLayout.themeLib}"/>
     <h:outputScript name="js/perfect-scrollbar.js" library="#{uiLayout.themeLib}"/>
     <h:outputScript name="js/layout.js" library="#{uiLayout.themeLib}"/>
