--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -177,19 +177,19 @@ img.riskImage:hover {
 }
 
 /* @media (min-width: 635px) and (max-width: 700px) {
-    .MiddleInitialWidth {
+    .MiddleInitialWidth, .MiddleInitialWidthB {
         width: 25%!important;
     }
 } */
 
 @media (min-width: 736px) and (max-width: 900px) {
-    .MiddleInitialWidth {
+    .MiddleInitialWidth, .MiddleInitialWidthB {
         width: 20%!important;
     }
 }
 
 @media (min-width: 900px) and (max-width: 1100px) {
-    .MiddleInitialWidth {
+    .MiddleInitialWidth, .MiddleInitialWidthB {
         width: 15%!important;
     }
 }
@@ -197,6 +197,10 @@ img.riskImage:hover {
 @media (min-width: 1100px){
     .MiddleInitialWidth {
         width: 12%!important;
+    }
+    
+    .MiddleInitialWidthB {
+    width: 15%!important;
     }
 }
 
@@ -207,7 +211,7 @@ img.riskImage:hover {
     padding: 7px 1px!important;
 	}
 	
-    .MiddleInitialWidth {
+    .MiddleInitialWidth, .MiddleInitialWidthB {
         width: 100%!important;
          border-right: 1px solid #D9E19B!important;
          border-radius: 3px!important;
@@ -280,7 +284,7 @@ img.riskImage:hover {
         /* padding: 10px 1px!important; */
     }
     
-    .CustomWidthFA2, .MiddleInitialWidth, .InputMergeRight, .InputMergeLeft {
+    .CustomWidthFA2, .MiddleInitialWidth, .MiddleInitialWidthB, .InputMergeRight, .InputMergeLeft {
    /*  padding: 10px 1px!important; */
     }
 
