TD CTO Version 1.23 - Revised 9/23/2016 Prashant

--- a/tcm/modules/web/src/main/webapp/template/html/buildingbenjamins-Forgot.html
+++ b/tcm/modules/web/src/main/webapp/template/html/buildingbenjamins-Forgot.html
@@ -1,96 +1,93 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
-<html>
-<head>
-    <title>Account Locked</title>
-    <meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type" />
-    <style type="text/css">
-        h1 {
-            font-family: Arial, sans-serif;
-            font-size: 30px;
-            color: #009ABB;
-        }
-
-        h2 {
-            font-family: Arial, sans-serif;
-            font-size: 18px;
-            color: #009ABB;
-        }
-
-        body, p, b, i, em, dt, dd, dl, caption, th, td, tr, u, select, option, form, div, li {
-            font-family: Arial, sans-serif;
-            font-size: 12px;
-        }
-
-            /* IE Specific */
-        body, textarea {
-            scrollbar-3dlight-color: #808080;
-            scrollbar-highlight-color: #808080;
-            scrollbar-face-color: #009ABB;
-            scrollbar-shadow-color: #808080;
-            scrollbar-darkshadow-color: #805B32;
-            scrollbar-arrow-color: #000000;
-            scrollbar-track-color: #F8EFE2;
-        }
-
-    </style>
-</head>
-<body bgcolor="#ffffff">
 <p>&nbsp;</p>
+<!-- [if IE]><html xmlns="http://www.w3.org/1999/xhtml" class="ie"><![endif]-->
+<p>&nbsp;</p>
+<!-- [if !IE]><!--><!--<![endif]--><!-- [if !mso]><!--><!--<![endif]--><!-- [if !mso]><!--><!--<![endif]--><!-- [if mso]>
+<body class="mso">
+<![endif]-->
+<p>&nbsp;</p>
+<!-- [if !mso]><!--><!--<![endif]-->
+<div class="wrapper" lang="x-wrapper">
+    <div class="preheader">
+        <div class="preheader__inner--inline"><!-- [if (mso)|(IE)]><table align="center" class="preheader" cellpadding="0" cellspacing="0"><tr><td style="width: 280px" valign="top"><![endif]-->
+            <div class="snippet">&nbsp;</div>
+            <!-- [if (mso)|(IE)]></td><td style="width: 280px" valign="top"><![endif]-->
+            <div class="webversion">&nbsp;</div>
+            <!-- [if (mso)|(IE)]></td></tr></table><![endif]--></div>
+    </div>
+    <div id="emb-email-header-container" class="header header--padded--inline"><!-- [if (mso)|(IE)]><table align="center" class="header" cellpadding="0" cellspacing="0"><tr><td style="width: 600px"><![endif]-->
+        <div class="logo emb-logo-margin-box" style="margin-top: 0px; margin-bottom: 0px;" align="center">
+            <div id="emb-email-header" class="logo-center" style="font-size: 0px !important; line-height: 0 !important;" align="center"><a title="Building Benjamins" href="https://www.buildingbenjamins.com"><img style="max-width: 337px;" src="i/BuildingBenjamins-reverse.png" alt="Building Benjamins" width="337" /></a></div>
+        </div>
+        <!-- [if (mso)|(IE)]></td></tr></table><![endif]--></div>
+    <div class="full-width--inline" style="background-color: #ffffff;">
+        <div class="layout one-col layout--inherit-padding--inline">
+            <div class="layout__inner" lang="x-layout__inner"><!-- [if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0"><tr class="layout-full-width" style="background-color: #ffffff;"><td class="layout__edges">&nbsp;</td><td style="width: 600px" class="w560"><![endif]-->
+                <div class="column">
+                    <div class="column__padding--inline">
+                        <div style="line-height: 20px; font-size: 1px;">&nbsp;</div>
+                    </div>
+                    <div class="column__padding--inline">
+                        <h1 style="text-align: center;">Reset Password</h1>
+                    </div>
+                    <div class="column__padding--inline">
+                        <div style="line-height: 15px; font-size: 1px;">&nbsp;</div>
+                    </div>
+                    <div class="column__padding--inline">
+                        <p style="text-align: left;">A request was received to change your password.</p>
+                        <p style="text-align: left;">For your security, we have locked this account. Please follow the prompts to create a new password. Once you have your new password, you may use it to access your account and your old password will be permanently disabled.</p>
+                        <p style="text-align: left;">Please store your User ID and Password in a safe place &ndash; and remember, neither Building Benjamins nor any of its affiliates will ever ask you to share your password with us.</p>
+                        <p style="text-align: left;"><em>If you have any questions, please contact us at&nbsp;<a href="mailto:support@buildingbenjamins.com">support@buildingbenjamins.com</a></em></p>
 
-<table align="center" bgcolor="#009abb" border="0" cellpadding="3" cellspacing="0" width="600">
-    <tbody>
-    <tr>
-        <td colspan="6">&nbsp;</td>
-    </tr>
-    <tr>
-        <td bgcolor="#ffffff" colspan="2"><img alt="Invessence" src="http://www.invessence.com/wp-content/uploads/2014/01/invessence_logo-clear-300x65.png" style="height: 45px; width: 208px; float: left" /></td>
-        <td style="vertical-align: top; text-align: center; background-color: #ffffff">&nbsp;</td>
-        <td style="vertical-align: top; text-align: center; background-color: #ffffff">&nbsp;</td>
-        <td style="vertical-align: top; text-align: center; background-color: #ffffff">&nbsp;</td>
-        <td style="vertical-align: top; text-align: center; background-color: #ffffff"><a class="synved-social-button synved-social-button-follow synved-social-size-24 synved-social-resolution-single synved-social-provider-facebook" data-provider="facebook" href="https://www.facebook.com/Invessence" rel="nofollow" style="font-size: 0px; height: 24px; width: 24px; margin: 0px 5px 5px 0px" target="_blank" title="Follow us on Facebook"><img alt="facebook" class="synved-share-image synved-social-image synved-social-image-follow" height="24" src="http://www.invessence.com/wp-content/plugins/social-media-feather/synved-social/image/social/regular/48x48/facebook.png" style="border-top: medium none; height: 24px; border-right: medium none; width: 24px; border-bottom: medium none; padding-bottom: 0px; padding-top: 0px; padding-left: 0px; margin: 0px; border-left: medium none; display: inline; padding-right: 0px; box-shadow: none" title="Follow us on Facebook" width="24" /></a> <a data-provider="twitter" href="http://twitter.com/Invessence" rel="nofollow" style="font-size: 0px; height: 24px; width: 24px; margin: 0px 5px 5px 0px" target="_blank" title="Follow us on Twitter"><img alt="twitter" height="24" src="http://www.invessence.com/wp-content/plugins/social-media-feather/synved-social/image/social/regular/48x48/twitter.png" style="border-top: medium none; height: 24px; border-right: medium none; width: 24px; border-bottom: medium none; padding-bottom: 0px; padding-top: 0px; padding-left: 0px; margin: 0px; border-left: medium none; display: inline; padding-right: 0px; box-shadow: none" title="Follow us on Twitter" width="24" /> </a><a class="synved-social-button synved-social-button-follow synved-social-size-24 synved-social-resolution-single synved-social-provider-linkedin" data-provider="linkedin" href="http://www.linkedin.com/company/invessence-inc-" rel="nofollow" style="font-size: 0px; height: 24px; width: 24px; margin: 0px 5px 5px 0px" target="_blank" title="Find us on Linkedin"><img alt="linkedin" class="synved-share-image synved-social-image synved-social-image-follow" height="24" src="http://www.invessence.com/wp-content/plugins/social-media-feather/synved-social/image/social/regular/48x48/linkedin.png" style="border-top: medium none; height: 24px; border-right: medium none; width: 24px; border-bottom: medium none; padding-bottom: 0px; padding-top: 0px; padding-left: 0px; margin: 0px; border-left: medium none; display: inline; padding-right: 0px; box-shadow: none" title="Find us on Linkedin" width="24" /> </a><a class="synved-social-button synved-social-button-follow synved-social-size-24 synved-social-resolution-single synved-social-provider-google_plus" data-provider="google_plus" href="https://plus.google.com/108251068767119607829/about" rel="nofollow" style="font-size: 0px; height: 24px; width: 24px; margin: 0px 5px 5px 0px" target="_blank" title="Follow us on Google+"><img alt="google_plus" class="synved-share-image synved-social-image synved-social-image-follow" height="24" src="http://www.invessence.com/wp-content/plugins/social-media-feather/synved-social/image/social/regular/48x48/google_plus.png" style="border-top: medium none; height: 24px; border-right: medium none; width: 24px; border-bottom: medium none; padding-bottom: 0px; padding-top: 0px; padding-left: 0px; margin: 0px; border-left: medium none; display: inline; padding-right: 0px; box-shadow: none" title="Follow us on Google+" width="24" /> </a></td>
-    </tr>
-    </tbody>
-    <tbody>
-    <tr>
-        <td colspan="6" style="background-color: #fff">
-            <table align="center" bgcolor="#ffffff" border="0" cellpadding="3" cellspacing="0" width="100%">
-                <tbody>
-                <tr>
-                    <td colspan="6" style="background-color: #fff">
-                        <h2 align="left">Reset Password</h2>
+                    </div>
+                </div>
+                <!-- [if (mso)|(IE)]></td><td class="layout__edges">&nbsp;</td></tr></table><![endif]--></div>
+            <div class="column__padding--inline">
+                <div class="btn btn--flat btn--large" style="text-align: center;">
+                    <a cs-button href="'0'"
+                       style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px; padding: 10px 15px; text-decoration: none; color: white;">Reset Password</a>
+                </div>
+            </div>
 
-                        <p align="left">A request was received to change your password. If you did not make this request, please contact us immediately.</p>
+        </div>
+    </div>
+    <div class="layout__separator--inline" style="line-height: 30px; font-size: 30px;">&nbsp;</div>
+    <div class="layout sidebar--inline email-footer">
+        <div class="layout__inner" lang="x-layout__inner"><!-- [if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0"><tr class="layout-email-footer"><td style="width: 400px;" valign="top" class="w360"><![endif]-->
+            <div class="column wide">
+                <div class="column__padding--inline">
+                    <table class="email-footer__links emb-web-links">
+                        <tbody>
+                        <tr>
+                            <td class="emb-web-links" style="width: 26px;"><a href="https://www.facebook.com/buildingbenjamins"><img src="http://buildingbenjamins.com/images/facebook.png" alt="" width="26" height="26" /></a></td>
+                            <td class="emb-web-links" style="width: 26px;"><a href="https://twitter.com/BldngBenjamins"><img src="http://buildingbenjamins.com/images/twitter.png" alt="" width="26" height="26" /></a></td>
+                            <td class="emb-web-links" style="width: 26px;"><a href="https://www.linkedin.com/company/building-benjamins"><img src="http://buildingbenjamins.com/images/linkedin.png" alt="" width="26" height="26" /></a></td>
+                            <td class="emb-web-links" style="width: 26px;"><a href="https://www.buildingbenjamins.com"><img src="http://buildingbenjamins.com/images/website.png" alt="" width="26" height="26" /></a></td>
+                        </tr>
+                        </tbody>
+                    </table>
 
-                        <p>To reset your password, please click the button below and enter the information requested.</p>
-
-                        <p><strong>NOTE: This link is valid for one use only.</strong></p>
-
-                        <p>You will be asked to:</p>
-
-                        <ol>
-                            <li>Enter your Userid.</li>
-                            <li>Enter your new password.</li>
-                            <li>Re-enter your new password to confirm it.</li>
-                            <li>Click &quot;Submit&quot;.</li>
-                        </ol>
-
-                        <p><a href="'0'/setPassword.xhtml?u='1'&amp;r='2'" target="_blank">RESET MY PASSWORD</a>.</p>
-                    </td>
-               </tr>
-                </tbody>
-            </table>
-        </td>
-    </tr>
-    <tr>
-        <td colspan="6" style="background-color: #fff"><span style="font-size: 12px"><em><span style="line-height: 23px">If you have any questions, please contact us at <a href="mailto:support@invessence.com">support@invessence.com</a> or call us at <strong>(201) 977-2704</strong>.</span></em></span></td>
-    </tr>
-    <tr>
-        <td colspan="6" style="background-color: #ebebeb"><span style="font-size: 11px; font-family: Helvetica; color: #808080; padding-bottom: 9px; text-align: left; padding-top: 9px; padding-left: 3px; line-height: 125%; padding-right: 2px"><strong>Invessence, Inc. &middot; One Main Street, Suite 202 &middot; Chatham, NJ 07928 &middot; USA</strong> </span></td>
-    </tr>
-    <tr>
-        <td colspan="6" style="background-color: #ebebeb"><span style="font-size: 11px; font-family: Helvetica; color: #808080; padding-bottom: 9px; text-align: left; padding-top: 9px; padding-left: 3px; line-height: 125%; padding-right: 2px">This email was sent by <a href="mailto:support@invessence.com" style="color: #404040 !important" target="_blank">support@invessence.com</a> </span></td>
-    </tr>
-    </tbody>
-</table>
-</body>
-</html>
+                    <div class="email-footer__address--inline">
+                        <div>Building Benjamins<br />129 Summit Avenue, Summit, NJ 07901<br />Phone: 908-598-0909</div>
+                    </div>
+                    <div class="email-footer__permission--inline">&nbsp;</div>
+                </div>
+            </div>
+            <!-- [if (mso)|(IE)]></td><td style="width: 200px;" valign="top" class="w160"><![endif]-->
+            <div class="column narrow">&nbsp;</div>
+            <!-- [if (mso)|(IE)]></td></tr></table><![endif]--></div>
+    </div>
+    <div class="layout one-col email-footer">
+        <div class="layout__inner" lang="x-layout__inner"><!-- [if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0"><tr class="layout-email-footer"><td style="width: 600px;" class="w560"><![endif]-->
+            <div class="column">
+                <div class="column__padding--inline">
+                    <div class="email-footer__subscription--inline">Unsubscribe</div>
+                </div>
+            </div>
+            <!-- [if (mso)|(IE)]></td></tr></table><![endif]--></div>
+    </div>
+    <div style="line-height: 40px; font-size: 40px;">&nbsp;</div>
+</div>
+<script src="js/jquery-1.7.2.min.js?h=C99A465920160826b" type="text/javascript"></script>
+<script type="text/javascript">// <![CDATA[
+$(function(){$('area,a').attr('target', '_blank');});
+// ]]></script>
