Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -1936,7 +1936,20 @@ h3 {
     }
 }
 
+@media (min-width: 320px) and (max-width: 360px) {
+	.SignupBlock0 > div {
+    margin-top:10px!important;
+    }
+    
+    .PwdReset0 {
+	margin-top:10px!important;
+	}
+}
 @media (min-width:360px) and (max-width: 480px) {
+	.PwdReset0 {
+	margin-top:10px!important;
+	}
+	
     .mobileFullWidth {
         width: 100%;
         margin: 5px 0;
@@ -2000,7 +2013,7 @@ h3 {
     }
     
     .SignupBlock0 > div {
-    margin-top:15px!important;
+    margin-top:10px!important;
     }
     
     .SignupBlock2 > div {
