--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -72,7 +72,7 @@ img.riskImage:hover {
 .errorText {
     background-color: transparent;
     color: #dd4b39;
-    font-size: 14px;
+    font-size: 13px;
     text-align: left;
 }
 /*
@@ -211,6 +211,10 @@ img.riskImage:hover {
 }
 
 @media (max-width: 735px){
+
+    .ui-panel > .ui-panel-content, .ui-panel {
+        padding: 5px!important;
+    }
 		
 	.ui-selectonemenu label.ui-selectonemenu-label {
 	    color: #778D9B!important;
@@ -241,8 +245,47 @@ img.riskImage:hover {
 	width: 180px!important;
 	}
 }
+
+@media (max-width: 355px) {
+    .acctTypeBtnNxt {
+        margin-top: 25px!important;
+    }
+}
+
+@media (max-width: 500px) {
+    .ResCheckSize {
+        width: 100%;
+    }
+
+    .saveNopenBtn {
+        margin-bottom: 25px;
+    }
+}
+
 @media (max-width: 735px) {
-	.FsRes14 {
+
+
+    .sharePercentageInput > input {
+        width: 100%!important;
+    }
+
+    img.imgSizeClose {
+        height: 10px;
+        width: 10px;
+        padding:0!important;
+    }
+
+    .ui-panel > .ui-panel-content, .ui-panel {
+        margin:5px 0px!important;
+    }
+
+
+
+    .BeneficiaryBlockPadding .ui-panel-content {
+padding: 5px!important;
+    }
+
+    .FsRes14 {
 	font-size: 14px!important;
 	}
 	
@@ -258,7 +301,7 @@ img.riskImage:hover {
 	}
 	
 	.BeneficiaryEditPanel > .ContainerIndent {
-	padding-right: 25px!important;
+	/*padding-right: 25px!important;*/
 	}
 	
 	.fundingRecurring > input {
@@ -476,6 +519,18 @@ img.riskImage:hover {
 }
 
 /*Prakash*/
+.imgSizeClose {
+    position: relative;
+}
+
+.CustomWidthAccountypePanel .ui-panel-content {
+    padding: 5px!important;
+    margin: 5px 5px!important;
+}
+
+.ui-panel > .ui-panel-content, .ui-panel {
+     padding:1px!important;
+ }
 
 .ui-state-error {
     height: 97%!important;
@@ -517,6 +572,10 @@ font-size: 14px;
 }
 
 input {
+    margin:0;
+}
+
+.ui-selectonemenu, input {
 	box-sizing: border-box;
 }
 
