--- a/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/tcm/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -643,7 +643,7 @@ width: 97%!important;
 .formPage .ui-inputfield.ui-state-focus {
     border: solid 1px #f2f2f2!important;
     background-color: transparent;
-    color:#025d3c!important;
+    color:#778D9B!important;
 }
 
 .ui-selectonemenu label.ui-selectonemenu-label {
